# pracel_tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260504_0001_baseline.py  20260504_0002_gmail_ingestion_models.py
backend/app/: main.py
backend/app/api/: gmail.py
backend/app/core/: settings.py  token_encryption.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  email.py  gmail_sync_state.py  mixins.py  oauth_token.py  user.py
backend/app/services/: gmail_oauth.py
backend/app/worker/: settings.py
backend/tests/: test_gmail_ingestion_models.py  test_gmail_oauth_api.py  test_health.py  test_settings.py  test_token_encryption.py  test_worker_settings.py
