[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-parcel-tracker"
version = "0.1.0"
description = "Self-hosted parcel tracking assistant foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3,<2.0",
    "arq>=0.26.1,<1.0",
    "asyncpg>=0.30.0,<1.0",
    "fastapi>=0.115.0,<1.0",
    "pydantic-settings>=2.6.0,<3.0",
    "sqlalchemy[asyncio]>=2.0.35,<3.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "cryptography>=43.0.0,<46.0.0",
    "google-auth>=2.35.0,<3.0",
    "google-auth-oauthlib>=1.2.1,<2.0",
    "google-api-python-client>=2.149.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2,<1.0",
    "pre-commit>=4.0.0,<5.0",
    "pytest>=8.3.3,<9.0",
    "ruff>=0.7.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".codex_deps",
    ".codex_pip_cache",
    ".codex_tmp",
    ".venv",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
